<resources>

    <string name="title">URC.</string>
    <string name="sign_in_link">Увійти</string>
    <string name="create_account_link">Створити акаунт</string>
    <string name="additional_text">Travel with us.2024</string>
    <string name="email">Введіть ваш email</string>
    <string name="password">Введіть ваш пароль</string>
    <string name="confirm_password">Підтвердіть ваш пароль</string>
    <string name="buy_tickets_text">Забронювати залізничні\nквитки онлайн</string>
    <string name="from">Місто відправлення</string>
    <string name="to">Місто призначення</string>
    <string name="date">Дата</string>
    <string name="find">Шукати квитки</string>
    <string name="book">Забронювати квиток</string>
    <string name="error_message">Обраного потягу не має</string>
    <string name="close">close</string>
    <string name="horizontal_line">horizontal_line</string>
    <string name="watches">watches</string>
    <string name="home">Головна</string>
    <string name="tickets">Квитки</string>
    <string name="support">Допомога</string>
    <string name="profile">Профіль</string>
    <string name="my_profile">Мій кабінет</string>
    <string name="go">Перейти</string>
    <string name="my_contacts">Мої контакти</string>
    <string name="name">ІМ\'Я</string>
    <string name="phone">НОМЕР ТЕЛЕФОНУ</string>
    <string name="apply">Підтвердити</string>
    <string name="mail">Написати</string>
    <string name="telephone">Зателефонувати</string>
    <string name="gmail">urc.support@gmail.com</string>
    <string name="number">+38 (068) 701–75–13</string>
    <string name="info">Довідка</string>
    <string name="baggage_norms">Норми багажу</string>
    <string name="animals_transportation">Перевезення тварин</string>
    <string name="bicycle_transportation">Перевезення велосипеду</string>
    <string name="equipment_transportation">Перевезення апаратури</string>
    <string name="booked_tickets">Квитки</string>
    <string name="no_tickets">На жаль, у вас поки що не має \nзаброньованих квитків :(</string>
    <string name="baggage_norms_text">Загальна вага ручної поклажі разом з її
надлишком не повинна перевищувати 50 кг
та 200 см у трьох вимірах (висота, ширина,
довжина). Кожен пасажир має право
безоплатно перевозити при собі понад
установлену норму ручної поклажі портфель,
дамську сумку, лижі та палиці до них,
сноуборд, вудлища, фотоапарат, відеокамеру
та інші дрібні речі, які за своїми розмірами
можуть бути розташовані у вагоні на місцях,
призначених для ручної поклажі.
Дозволяється перевозити при собі за рахунок
норми ручної поклажі пасажира дитячі
коляски (при проїзді дитини). Якщо вага
багажу перевищує 36 кг або 200 см у трьох
вимірах - необхідно придбати сервісний
квиток.</string>
    <string name="animals_transportation_text">Собаки:

\n\n - Перевезення тварин здійснюється за
наявності ветеринарного документа та
електронного квитка для перевезення
тварини (потрібно поставити відмітку про
перевезення тварини під даними
пасажира);

\n - Собак малих порід необхідно
перевозити в сумці з водонепроникним
дном. Також тварин можна перевозити в
вагонах СВ при умові викупу всіх місць в
купе;

\n - Собак великих порід (вище 45 см)
перевозять в наморднику та на повідку.
При цьому пасажир зобов\'язаний оплатити
вартість проїзних документів за кількістю
незайнятих місць у купе за повним
тарифом, крім випадків, якщо цей пасажир
належить до осіб, пільги яких визначено
законодавством України.

\n - Урегіональних поїздах собаки великих
порід (вище ніж 45 см у холці)
перевозяться в крайніх тамбурах першого
й останнього вагонів під наглядом
супровідника, а дрібні кімнатні тварини
розміщуються у спеціальних засобах для перевезення (не більше двох особин) на
місцях, призначених для ручної поклажі, на
руках у пасажира або під місцями для
сидіння.

\n\nКоти:

\n\n - Котів перевозять в спеціальних ящиках,
корзинах, клітках з водонепроникним дном.
Для перевезення необхідно оформити
квитанцію на перевезення тварини
(поставити відмітку про перевезення
тварини під даними пасажира). Один
пасажир може перевозити одного кота.

\n\nПтахи:

\n\n - Дрібні кімнатні тварини та кімнатні
декоративні птахи (не більше двох особин)
перевозяться в ящиках, корзинах, клітках
або контейнерах із водонепроникним дном
(не більше одного місця ручної поклажі).

\n - Свійська птиця (кури, індики, гуси,
качки, цесарки, перепілки, голуби тощо)
допускається до перевезення лише в
загальних вагонах місцевих поїздів та в
регіональних поїздах у спеціальних засобах
для переміщення (не більше одного місця
ручної поклажі), розміри яких не
перевищують розмірів, передбачених для
ручної поклажі.</string>
    <string name="bicycle_transportation_text">У пасажирських потягах при проїзді у
внутрішньому сполученні дозволяється
перевозити при собі за рахунок норми ручної
поклажі пасажира велосипеди в розібраному
та впакованому стані (не більше одного), за
умови, що його розмір відповідає нормі
ручної поклажі - не перевищує 36 кг і не
перевищує 200 см за сумою трьох вимірів
(висота, ширина, довжина).

\n\nПеревезення велосипедів здійснюється у
розібраному та впакованому стані за умови,
що вони можуть вільно розміщуватись на
місцях, передбачених для перевезення ручної
поклажі.

\n\nВелосипед у зібраному вигляді (на ходу)
перевозиться як надлишок ручної поклажі в
тамбурі вагона (не більше одного на тамбур)
або в місцях, обладнаних для розміщення
велосипедів.

\n\nВартість такого перевезення дорівнює
вартості повного квитка.</string>
    <string name="equipment_transportation_text">Електронна, побутова апаратура (телевізор,
відеокамера, радіоприймач, комп\'ютер,
пилосос, мікрохвильова піч тощо)
допускається до перевезення безоплатно за
рахунок норми ручної поклажі або разом з
іншими речами за умови, що її розмір та вага
не перевищує 536 кг та розмір якої за сумою
трьох вимірів (висота, ширина, довжина),
зроблених відповідно до трьох проекцій в
місцях максимальної довжини, не перевищує
200 см.</string>

</resources>