<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:padding="15dp"
    android:gravity="top|center"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/upside_style"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="60sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/sign_up_emailEditText"
            android:background="@drawable/link_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/sign_up_passwordEditText"
            android:background="@drawable/link_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <EditText
            android:id="@+id/sign_up_confirm_passwordEditText"
            android:background="@drawable/link_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sing_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/find_button_style"
            android:text="@string/create_account_link"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>