<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:padding="15dp"
    android:gravity="top|center"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/upside_style"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="60sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in_link"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_in_link"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/find_button_style"
                android:textAllCaps="false"
                android:textSize="15sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_link"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sign_in_link"
                android:layout_marginTop="40dp"
                android:text="@string/create_account_link"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/find_button_style"
                android:textAllCaps="false"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/additional_text"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>