<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_page_style"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/buy_tickets_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/find_window_style"
            android:orientation="vertical"
            android:padding="10dp">

            <AutoCompleteTextView
                android:id="@+id/fromEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/border_style"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/from"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="@color/black" />

            <AutoCompleteTextView
                android:id="@+id/toEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/border_style"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/to"
                android:padding="10dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/border_style"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/date"
                android:inputType="date"
                android:padding="10dp"
                android:textColorHint="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/findButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/find_button_style"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/find"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/result_style"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/top">

        <TextView
            android:id="@+id/time_from_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/time_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/right_arrow"
            app:layout_constraintStart_toEndOf="@+id/time_from_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_to_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/time_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/right_arrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/from_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/time_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_from_textView" />

        <ImageView
            android:id="@+id/horizontal_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/horizontal_line"
            android:contentDescription="@string/horizontal_line"
            app:layout_constraintStart_toEndOf="@+id/from_textView"
            app:layout_constraintTop_toBottomOf="@+id/right_arrow" />

        <TextView
            android:id="@+id/to_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/time_color"
            app:layout_constraintStart_toEndOf="@+id/horizontal_line"
            app:layout_constraintTop_toBottomOf="@+id/time_to_textView" />

        <ImageView
            android:id="@+id/watches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/watches"
            android:contentDescription="@string/watches"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time_to_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_overall_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintStart_toEndOf="@+id/watches"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/find_button_style"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/book"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/from_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/no_trains_style"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/error_message"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/close_white"
            android:contentDescription="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>